--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -1,2 +1,2 @@
-loginpage = https://passport.yandex.ru/auth
-chromedriver = /usr/bin/chromedriver
+loginpage = https://www.citilink.ru/login/
+chromedriver = C:/Users/anferovaav/IdeaProjects
