--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -1,2 +1,4 @@
 loginpage = https://www.citilink.ru/login/
-chromedriver = C:/Users/anferovaav/IdeaProjects
+chromedriver = src\\test\\resources\\chromedriver.exe
+login = anf0404@bk.ru
+password = rybbn2020
