--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -1,4 +1,5 @@
-loginpage = https://www.citilink.ru/login/
+loginpage = https://www.citilink.ru/
 chromedriver = src\\test\\resources\\chromedriver.exe
 login = anf0404@bk.ru
 password = rybbn2020
+name = Анастасия
